# is-evolution

./: .gitignore  README.md  common.just  config.example.yaml  justfile  pyproject.toml
IS_expansion_phylogeny/: README.md  is_expansion_phylogeny_cleaned.R
analysis/01_pathogen_is_survey/: pairwise_ani.R  plot_eskape_is_counts.py  plot_is_per_taxon.py  plot_taxon_is_per_contig_type.py
analysis/01_seqs_flanks_boundaries/: calculate_IS_flank_boundaries.py  exact_copy_analysis.py
analysis/02_isl3_taxonomic_distribution/: is_expansion_phylogeny.R  plot_isl3_per_cocci.py
analysis/03_shortread_is_estimate_timeline/: count_ise.py  efm_filter_sra.py  efm_plot_ise.py  epi_filter_sra.py  epi_plot_ise.py  ise_plots.py  process_entrez_results.py
analysis/04_pangraph_structural_variation/: junction_stats.py  junction_stats_utils.py
data_processing/: S1S2_table_is_counts.py  combine_all_ncbi.py  supplementary_table_is_counts.py  supplementary_table_is_counts_per_sample.csv
dataproc/: combine_all_ncbi.py  final_samples.py  ncbi_complete.py  table_is_counts.py
isl3_expansion_timeline/: filtered_srr.txt  main.nf
lr_meta_sv/: lr_meta.R  sniffles.sh  sniffles_analysis.py  sniffles_workflow.sh
pangraph/: isl3_disrupted_genes.py  junction_stats.py  plot_disrupted_genes.py
poppunk/: poppunk_clusters.R
src/biobehr/: align.py  gff_utils.py  (+6 more)
tpase_sequence_diversity/: nonredundant_tpase_orfs_fig1D.py  plot_sample_tpase_diversity.py
workflows/: README.md  env_nf_sr.yaml  post.nf  post.params_example.yaml  pre.nf  pre.params_example.yaml  sniffles_example_workflow.sh
(+7 files in other folders)
