[project]
name = "is-evolution"
version = "0.0.0"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
all = [
	"polars>=1.30",
	"numpy",
	"scipy",
	"statsmodels",
	"plotly",
	"xmltodict",
	"xlsxwriter",
	"pyyaml",
	"python-box",
	"kaleido",
	"tqdm",
	"pyfaidx",
	"xlsxwriter",
	"requests"
]